Optionally generate jacoco html report

--- a/build.gradle
+++ b/build.gradle
@@ -91,7 +91,8 @@ dependencies {
 jacocoTestReport {
     reports {
         xml.enabled true
-        html.enabled false
+        html.enabled project.hasProperty('jacoco_htmlReport') \
+                && 'true' == project.property('jacoco_htmlReport')
     }
 }
 
