--- a/gradle/dist.gradle
+++ b/gradle/dist.gradle
@@ -40,7 +40,7 @@ remotes {
     }
 }
 
-task uploadDist(dependsOn: 'assembleMainDist') doLast {
+task uploadDist(dependsOn: 'assembleDist') doLast {
     ssh.run {
         session(remotes.sourceforge_shell_create) {
             execute "create"
