--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,9 @@ dist: trusty
 language: java
 jdk:
   - oraclejdk8
+  - oraclejdk9
   - openjdk8
+  - openjdk10
 services:
   - docker
 #before_install:
