Set root logger config

--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -31,6 +31,7 @@
 #
 
 ## set root logging preferences..
+log4j.rootLogger=info, stdout
 log4j.logger.net.fortuna.ical4j=info, stdout
 
 log4j.logger.net.fortuna.ical4j.filter=info, stdout
