add dependency for groovy-dateutil
This additional dependency seems to be required, in order to finish the tests. I'm not sure, if this dependency is also required at runtime.

See release notes for Groovy 2.5 at http://www.groovy-lang.org/releasenotes/groovy-2.5.html:

> The extension methods for the java.util.Date class are now in a separate groovy-dateutil module which isn’t included by default when using the groovy-all pom dependency. Add the additional module as a dependency if you need it or consider migrating to the java.time JSR-310 classes (similar Groovy extension methods exist for those classes and they are included by default when using the groovy-all pom dependency).

--- a/build.gradle
+++ b/build.gradle
@@ -78,6 +78,7 @@ dependencies {
     
     implementation 'javax.cache:cache-api:1.0.0', optional
     implementation "org.codehaus.groovy:groovy-all:$groovyVersion", optional
+    implementation "org.codehaus.groovy:groovy-dateutil:$groovyVersion", optional
 
     compileOnly 'biz.aQute.bnd:bndlib:2.3.0'
 
