--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ targetCompatibility = 1.7
 
 ext {
     slf4jVersion = '1.7.25'
+    groovyVersion = '2.5.4'
 }
 
 /*
@@ -76,7 +77,8 @@ dependencies {
 			'org.threeten:threetenbp:1.3.6'
     
     compile 'javax.cache:cache-api:1.0.0', optional
-    compile 'org.codehaus.groovy:groovy-all:2.3.2', optional
+    compile "org.codehaus.groovy:groovy-all:$groovyVersion", optional
+    implementation "org.codehaus.groovy:groovy-dateutil:$groovyVersion", optional
 
     compileOnly 'biz.aQute.bnd:bndlib:2.3.0'
 
