--- a/build.gradle
+++ b/build.gradle
@@ -74,8 +74,7 @@ dependencies {
             'commons-codec:commons-codec:1.10',
             'org.apache.commons:commons-lang3:3.6',
             'org.apache.commons:commons-collections4:4.1',
-			'org.threeten:threetenbp:1.3.6',
-            'javax.mail:javax.mail-api:1.5.4'
+			'org.threeten:threetenbp:1.3.6'
     
     compile 'javax.cache:cache-api:1.0.0', optional
     compile "org.codehaus.groovy:groovy-all:$groovyVersion", optional
@@ -88,7 +87,7 @@ dependencies {
         'commons-io:commons-io:2.4',
         'org.ccil.cowan.tagsoup:tagsoup:1.2.1',
         "org.slf4j:slf4j-log4j12:$slf4jVersion",
-        'org.ehcache:ehcache:3.4.0', 'com.sun.mail:javax.mail:1.5.4'
+        'org.ehcache:ehcache:3.4.0'
 }
 
 jacocoTestReport {
