Support for UTC as default timezone for DateTime instances

--- a/src/test/resources/ical4j.properties
+++ b/src/test/resources/ical4j.properties
@@ -45,7 +45,7 @@ net.fortuna.ical4j.timezone.update.enabled=false
 #net.fortuna.ical4j.timezone.cache.impl=net.fortuna.ical4j.util.MapTimeZoneCache
 
 #net.fortuna.ical4j.timezone.date.floating={true|false}
-#net.fortuna.ical4j.timezone.utcDefault={true|false}
+#net.fortuna.ical4j.timezone.default.utc={true|false}
 
 #net.fortuna.ical4j.factory.decoder=net.fortuna.ical4j.util.DefaultDecoderFactory
 
