--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ plugins {
     id "nebula.provided-base" version "3.0.3"
     id "com.jfrog.bintray" version "1.8.4"
     id "net.ltgt.errorprone" version "0.8.1"
+    id 'org.jetbrains.kotlin.jvm' version '1.3.61'
 }
 
 apply plugin: 'java'
