--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ services:
 #before_install:
 #  - etc/scripts/update-zoneinfo.sh
 script:
-  - ./gradlew build jacocoTestReport
+  - ./gradlew build --stacktrace --info jacocoTestReport
 after_success:
   - bash <(curl -s https://codecov.io/bash)
 deploy:
