--- a/build.gradle
+++ b/build.gradle
@@ -220,6 +220,16 @@ publishing {
             }
         }
     }
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = uri("https://maven.pkg.github.com/ical4j/ical4j")
+            credentials {
+                username = project.findProperty('gpr.user') ?: System.getenv("GPR_USER")
+                username = project.findProperty('gpr.key') ?: System.getenv("GPR_API_KEY")
+            }
+        }
+    }
 }
 
 signing {
