--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,19 +1,18 @@
-name: Java CI
+name: Publish snapshots
 
 on: [push]
 
 jobs:
-  build:
-
+  gradle:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
+    - uses: actions/checkout@v1
+    - uses: actions/setup-java@v1
       with:
-        java-version: 1.8
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew build
+        java-version: 11
+    - uses: eskatos/gradle-command-action@v1
+      with:
+        arguments: build -x test publish
+      env:
+        GPR_USERNAME: benfortuna
+        GPR_TOKEN: ${{ secrets.GITHUB_TOKEN }}
