--- a/.github/workflows/run-build.yml
+++ b/.github/workflows/run-build.yml
@@ -5,9 +5,9 @@ name: Java CI with Gradle
 
 on:
   push:
-    branches: [ develop ]
+    branches: [ '*' ]
   pull_request:
-    branches: [ develop ]
+    branches: [ '*' ]
 
 jobs:
   build:
@@ -19,8 +19,11 @@ jobs:
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
-        java-version: 1.8
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+        java-version: 11
+#    - name: Grant execute permission for gradlew
+#      run: chmod +x gradlew
     - name: Build with Gradle
-      run: ./gradlew build
+#      run: ./gradlew build
+      uses: eskatos/gradle-command-action@v1
+      with:
+        arguments: build
