--- a/.github/workflows/publish-snapshots.yml
+++ b/.github/workflows/publish-snapshots.yml
@@ -1,6 +1,10 @@
 name: Publish snapshots
 
-on: [push]
+on:
+  push:
+    branches:
+      - 'develop'
+      - 'feature/jsr-310-localdate'
 
 jobs:
   gradle:
