--- a/.github/workflows/run-build.yml
+++ b/.github/workflows/run-build.yml
@@ -3,11 +3,7 @@
 
 name: Java CI with Gradle
 
-on:
-  push:
-    branches: [ '*' ]
-  pull_request:
-    branches: [ '*' ]
+on: [push]
 
 jobs:
   build:
