--- a/build.gradle
+++ b/build.gradle
@@ -88,7 +88,7 @@ javadoc {
         options.addStringOption('Xdoclint:none', '-quiet')
     }
     options {
-        links 'https://docs.oracle.com/javase/8/docs/api/'
+        links 'https://docs.oracle.com/en/java/javase/11/docs/api/'
     }
 }
 
