--- a/.github/workflows/run-build.yml
+++ b/.github/workflows/run-build.yml
@@ -12,8 +12,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
+    - uses: actions/setup-java@v1
       with:
         java-version: 11
 #    - name: Grant execute permission for gradlew
